feat: 素材选择器通过TitleValue筛选

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="zh-CN">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/src//assets//logo.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="description" content="数字藏品生态平台 - 用数字收藏美好生活" />
     <meta name="keywords" content="数字藏品,NFT,数字营销,IP孵化,创作者经济" />
-    <title>数字藏品生态平台 - 用数字收藏美好生活</title>
+    <title>vBox | 国内领先的数字藏品生态平台</title>
   </head>
   <body>
     <div id="root"></div>
